--- a/banner-gen/src/main/resources/application.properties
+++ b/banner-gen/src/main/resources/application.properties
@@ -5,4 +5,8 @@ gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-1.
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
+spring.cloud.gcp.credentials.location=file:/banner-gen/bb-hackathon-app-d0569ae3445d.json
+spring.cloud.gcp.project-id=bb-hackathon-app
+
+
 
